Fix impact video container height on mobile; bump CV to v=2

--- a/transactions.css
+++ b/transactions.css
@@ -617,6 +617,7 @@
   .cs-impact__right {
     flex: none;
     width: 100%;
+    height: 400px;
   }
 
   .cs-impact__right video {
